encoded day and time using sine and cosine

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -360,10 +360,20 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Resources:\n",
+    "### Resources\n",
+    "#### Feature engineering (encode date and time with sine and cosine)\n",
     "1. https://scikit-learn.org/stable/auto_examples/applications/plot_cyclical_feature_engineering.html#trigonometric-features\n",
-    "2."
+    "2. http://blog.davidkaleko.com/feature-engineering-cyclical-features.html"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
