--- a/inspection.ipynb
+++ b/inspection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "[862 rows x 6 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,58 +346,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.724510</td>\n",
-       "      <td>-1.241573</td>\n",
-       "      <td>-0.000468</td>\n",
-       "      <td>1.415481</td>\n",
-       "      <td>0.544591</td>\n",
-       "      <td>-0.296548</td>\n",
-       "      <td>-0.033097</td>\n",
-       "      <td>0.110755</td>\n",
+       "      <td>0.724488</td>\n",
+       "      <td>-1.241554</td>\n",
+       "      <td>-0.000427</td>\n",
+       "      <td>1.415490</td>\n",
+       "      <td>0.544631</td>\n",
+       "      <td>-0.296610</td>\n",
+       "      <td>-0.033131</td>\n",
+       "      <td>0.110761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.724510</td>\n",
-       "      <td>-1.241573</td>\n",
-       "      <td>0.365512</td>\n",
-       "      <td>1.367287</td>\n",
-       "      <td>0.544591</td>\n",
-       "      <td>-0.296548</td>\n",
-       "      <td>-0.033097</td>\n",
-       "      <td>0.110755</td>\n",
+       "      <td>0.724488</td>\n",
+       "      <td>-1.241554</td>\n",
+       "      <td>0.365557</td>\n",
+       "      <td>1.367297</td>\n",
+       "      <td>0.544631</td>\n",
+       "      <td>-0.296610</td>\n",
+       "      <td>-0.033131</td>\n",
+       "      <td>0.110761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.724510</td>\n",
-       "      <td>-1.241573</td>\n",
-       "      <td>0.706552</td>\n",
-       "      <td>1.225991</td>\n",
-       "      <td>0.683874</td>\n",
-       "      <td>-0.409039</td>\n",
-       "      <td>0.243598</td>\n",
-       "      <td>-0.334332</td>\n",
+       "      <td>0.724488</td>\n",
+       "      <td>-1.241554</td>\n",
+       "      <td>0.706600</td>\n",
+       "      <td>1.226002</td>\n",
+       "      <td>0.683916</td>\n",
+       "      <td>-0.409101</td>\n",
+       "      <td>0.243570</td>\n",
+       "      <td>-0.334331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.724510</td>\n",
-       "      <td>-1.241573</td>\n",
-       "      <td>0.999409</td>\n",
-       "      <td>1.001221</td>\n",
-       "      <td>0.683874</td>\n",
-       "      <td>-0.296548</td>\n",
-       "      <td>-0.033097</td>\n",
-       "      <td>-0.334332</td>\n",
+       "      <td>0.724488</td>\n",
+       "      <td>-1.241554</td>\n",
+       "      <td>0.999460</td>\n",
+       "      <td>1.001235</td>\n",
+       "      <td>0.683916</td>\n",
+       "      <td>-0.296610</td>\n",
+       "      <td>-0.033131</td>\n",
+       "      <td>-0.334331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.724510</td>\n",
-       "      <td>-1.241573</td>\n",
-       "      <td>1.224126</td>\n",
-       "      <td>0.708296</td>\n",
-       "      <td>0.683874</td>\n",
-       "      <td>-0.409039</td>\n",
-       "      <td>0.243598</td>\n",
-       "      <td>-0.334332</td>\n",
+       "      <td>0.724488</td>\n",
+       "      <td>-1.241554</td>\n",
+       "      <td>1.224180</td>\n",
+       "      <td>0.708312</td>\n",
+       "      <td>0.683916</td>\n",
+       "      <td>-0.409101</td>\n",
+       "      <td>0.243570</td>\n",
+       "      <td>-0.334331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -412,58 +412,58 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>852</th>\n",
-       "      <td>0.560712</td>\n",
-       "      <td>1.282372</td>\n",
-       "      <td>-1.366325</td>\n",
-       "      <td>0.367177</td>\n",
-       "      <td>1.554393</td>\n",
-       "      <td>-0.971495</td>\n",
-       "      <td>0.852329</td>\n",
-       "      <td>-0.779419</td>\n",
+       "      <td>0.560688</td>\n",
+       "      <td>1.282359</td>\n",
+       "      <td>-1.366298</td>\n",
+       "      <td>0.367197</td>\n",
+       "      <td>1.554444</td>\n",
+       "      <td>-0.971558</td>\n",
+       "      <td>0.852314</td>\n",
+       "      <td>-0.779423</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>854</th>\n",
-       "      <td>0.560712</td>\n",
-       "      <td>1.282372</td>\n",
-       "      <td>-1.225062</td>\n",
-       "      <td>0.708296</td>\n",
-       "      <td>1.554393</td>\n",
-       "      <td>-0.971495</td>\n",
-       "      <td>0.852329</td>\n",
-       "      <td>-0.779419</td>\n",
+       "      <td>0.560688</td>\n",
+       "      <td>1.282359</td>\n",
+       "      <td>-1.225034</td>\n",
+       "      <td>0.708312</td>\n",
+       "      <td>1.554444</td>\n",
+       "      <td>-0.971558</td>\n",
+       "      <td>0.852314</td>\n",
+       "      <td>-0.779423</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>856</th>\n",
-       "      <td>0.560712</td>\n",
-       "      <td>1.282372</td>\n",
-       "      <td>-1.000345</td>\n",
-       "      <td>1.001221</td>\n",
-       "      <td>1.536982</td>\n",
-       "      <td>-1.196477</td>\n",
-       "      <td>1.184364</td>\n",
-       "      <td>-0.334332</td>\n",
+       "      <td>0.560688</td>\n",
+       "      <td>1.282359</td>\n",
+       "      <td>-1.000314</td>\n",
+       "      <td>1.001235</td>\n",
+       "      <td>1.537033</td>\n",
+       "      <td>-1.196540</td>\n",
+       "      <td>1.184355</td>\n",
+       "      <td>-0.334331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>858</th>\n",
-       "      <td>0.560712</td>\n",
-       "      <td>1.282372</td>\n",
-       "      <td>-0.707488</td>\n",
-       "      <td>1.225991</td>\n",
-       "      <td>1.536982</td>\n",
-       "      <td>-1.196477</td>\n",
-       "      <td>1.571738</td>\n",
-       "      <td>-0.334332</td>\n",
+       "      <td>0.560688</td>\n",
+       "      <td>1.282359</td>\n",
+       "      <td>-0.707454</td>\n",
+       "      <td>1.226002</td>\n",
+       "      <td>1.537033</td>\n",
+       "      <td>-1.196540</td>\n",
+       "      <td>1.571737</td>\n",
+       "      <td>-0.334331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>860</th>\n",
-       "      <td>0.560712</td>\n",
-       "      <td>1.282372</td>\n",
-       "      <td>-0.366448</td>\n",
-       "      <td>1.367287</td>\n",
-       "      <td>1.676265</td>\n",
-       "      <td>-1.083986</td>\n",
-       "      <td>0.852329</td>\n",
-       "      <td>-0.779419</td>\n",
+       "      <td>0.560688</td>\n",
+       "      <td>1.282359</td>\n",
+       "      <td>-0.366411</td>\n",
+       "      <td>1.367297</td>\n",
+       "      <td>1.676317</td>\n",
+       "      <td>-1.084049</td>\n",
+       "      <td>0.852314</td>\n",
+       "      <td>-0.779423</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -472,35 +472,35 @@
       ],
       "text/plain": [
        "     sin_day_of_year  cos_day_of_year  sin_hour  cos_hour        P0         T  \\\n",
-       "0           0.724510        -1.241573 -0.000468  1.415481  0.544591 -0.296548   \n",
-       "2           0.724510        -1.241573  0.365512  1.367287  0.544591 -0.296548   \n",
-       "4           0.724510        -1.241573  0.706552  1.225991  0.683874 -0.409039   \n",
-       "6           0.724510        -1.241573  0.999409  1.001221  0.683874 -0.296548   \n",
-       "8           0.724510        -1.241573  1.224126  0.708296  0.683874 -0.409039   \n",
+       "0           0.724488        -1.241554 -0.000427  1.415490  0.544631 -0.296610   \n",
+       "2           0.724488        -1.241554  0.365557  1.367297  0.544631 -0.296610   \n",
+       "4           0.724488        -1.241554  0.706600  1.226002  0.683916 -0.409101   \n",
+       "6           0.724488        -1.241554  0.999460  1.001235  0.683916 -0.296610   \n",
+       "8           0.724488        -1.241554  1.224180  0.708312  0.683916 -0.409101   \n",
        "..               ...              ...       ...       ...       ...       ...   \n",
-       "852         0.560712         1.282372 -1.366325  0.367177  1.554393 -0.971495   \n",
-       "854         0.560712         1.282372 -1.225062  0.708296  1.554393 -0.971495   \n",
-       "856         0.560712         1.282372 -1.000345  1.001221  1.536982 -1.196477   \n",
-       "858         0.560712         1.282372 -0.707488  1.225991  1.536982 -1.196477   \n",
-       "860         0.560712         1.282372 -0.366448  1.367287  1.676265 -1.083986   \n",
+       "852         0.560688         1.282359 -1.366298  0.367197  1.554444 -0.971558   \n",
+       "854         0.560688         1.282359 -1.225034  0.708312  1.554444 -0.971558   \n",
+       "856         0.560688         1.282359 -1.000314  1.001235  1.537033 -1.196540   \n",
+       "858         0.560688         1.282359 -0.707454  1.226002  1.537033 -1.196540   \n",
+       "860         0.560688         1.282359 -0.366411  1.367297  1.676317 -1.084049   \n",
        "\n",
        "            U        Ff  \n",
-       "0   -0.033097  0.110755  \n",
-       "2   -0.033097  0.110755  \n",
-       "4    0.243598 -0.334332  \n",
-       "6   -0.033097 -0.334332  \n",
-       "8    0.243598 -0.334332  \n",
+       "0   -0.033131  0.110761  \n",
+       "2   -0.033131  0.110761  \n",
+       "4    0.243570 -0.334331  \n",
+       "6   -0.033131 -0.334331  \n",
+       "8    0.243570 -0.334331  \n",
        "..        ...       ...  \n",
-       "852  0.852329 -0.779419  \n",
-       "854  0.852329 -0.779419  \n",
-       "856  1.184364 -0.334332  \n",
-       "858  1.571738 -0.334332  \n",
-       "860  0.852329 -0.779419  \n",
+       "852  0.852314 -0.779423  \n",
+       "854  0.852314 -0.779423  \n",
+       "856  1.184355 -0.334331  \n",
+       "858  1.571737 -0.334331  \n",
+       "860  0.852314 -0.779423  \n",
        "\n",
        "[431 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "Name: next_T, Length: 431, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,53 +542,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = X.to_numpy(), y.to_numpy()[1:]"
+    "X, y = X.to_numpy()[1:], y.to_numpy()[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 = X[:6]\n",
+    "y1 = y[6]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(431, 8)"
+       "(6, 8)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "x1 = X[429]\n",
-    "y1 = y[429]"
+    "x1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 = np.reshape(x1, (1,6,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "8.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,16 +619,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wp = torch.load('WP200-wtf.pt')"
+    "wp = torch.load('WP100-wtf_multistep3.pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +636,7 @@
       "text/plain": [
        "ClassicWeatherProphet(\n",
        "  (model): Sequential(\n",
-       "    (0): Linear(in_features=8, out_features=64, bias=True)\n",
+       "    (0): Linear(in_features=48, out_features=64, bias=True)\n",
        "    (1): ReLU()\n",
        "    (2): Linear(in_features=64, out_features=64, bias=True)\n",
        "    (3): ReLU()\n",
@@ -634,7 +645,7 @@
        ")"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +664,7 @@
       "text/plain": [
        "ClassicWeatherProphet(\n",
        "  (model): Sequential(\n",
-       "    (0): Linear(in_features=8, out_features=64, bias=True)\n",
+       "    (0): Linear(in_features=48, out_features=64, bias=True)\n",
        "    (1): ReLU()\n",
        "    (2): Linear(in_features=64, out_features=64, bias=True)\n",
        "    (3): ReLU()\n",
@@ -662,7 +673,7 @@
        ")"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +693,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 6, 8])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,16 +722,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/masters/lib/python3.10/site-packages/torch/_tensor_str.py:115: UserWarning: The operator 'aten::nonzero' is not currently supported on the MPS backend and will fall back to run on the CPU. This may have performance implications. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1666646991213/work/aten/src/ATen/mps/MPSFallback.mm:11.)\n",
+      "  nonzero_finite_vals = torch.masked_select(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "tensor([[1.0483]], device='mps:0', grad_fn=<LinearBackward0>)"
+       "tensor([[[7.8834]]], device='mps:0', grad_fn=<LinearBackward0>)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,6 +747,13 @@
    "source": [
     "y_hat"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
