--- a/playground/inspection.ipynb
+++ b/playground/inspection.ipynb
@@ -712,7 +712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masters",
+   "display_name": "weather_prophet",
    "language": "python",
    "name": "python3"
   },
@@ -726,12 +726,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9 (main, Jan 11 2023, 15:21:40) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bb7fab73ff06782fdb7c893c145e9fed38cd61fdac306d5e7822b4090927a99a"
+    "hash": "c21f29f0cf615e4a31aec596abf0aac77b58cce41fe971d0908bb4c9715d0889"
    }
   }
  },
